# TrippleEffect

./: .env  .env.example  .gitignore  .pyre_configuration  LICENSE  PROJECT_PLAN.md  README.md  TrippleEffect_Framework_Documentation.md  analyze_log.py  analyze_log2.py  clear_contaminated_history.py  config.yaml  debug_events.py  find_gaps.py  fix.py  fix_indent.py  fix_indent_2.py  fix_ollama_semaphore.py  fix_perf_mock.py  fix_prompts.py  fix_test_async_classes.py  fix_test_errors.py  fix_test_mocks.py  fix_tests.py  governance.yaml  logging.conf  main.py  manage.py  models.py  parse_log.py  prompts-OLD.json  prompts.json  prompts.yaml  prompts_injected.txt  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh  scratch_analysis.py  scratch_analysis2.py  (+11 more)
.task/: backlog.data  completed.data  pending.data  undo.data
TrippleEffect/: .gitignore  requirements.txt
agents/: agent_manager.py  base_agent.py
api_clients/: **init**.py  anthropic_client.py  ollama_client.py  openai_client.py  openrouter_client.py
config/: global_settings.py
design_docs/: CG_FRONTEND_DESIGN.md
docs/: API_REFERENCE.md  ASSET_SEARCH_TOOL_README.md  CORE_CONCEPTS.md  FEATURES.md  FRAMEWORK.md  SECURITY.md  TECH_STACK.md  TOOL_MAKING.md  TROUBLESHOOTING.md
helperfiles/: CLINE_REFERENCE_FILES.md  CURRENT_ISSUES.md  DEVELOPMENT _RULES. md  DEVELOPMENT _WORKFLOW. md  DEVELOPMENT_RULES.md  FUNCTIONS_INDEX.md  FUNCTIONS_INDEX_002  FUNCTIONS_INDEX_002.md  HOW_TO_IMPLEMENT_TOOL_USE.md  PROJECT_PLAN.md  PROJECT_TREE.md  PROMPT_ENGINEERING.md  SUGGESTIONS.md  TASKWARRIOR.md  TOOL_MAKING.md  (+1 more)
(+145 files in other folders)
