[metadata]
name = TrippleEffect
version = 0.1.0
author = Your Name
description = Collaborative LLM Agent Framework for Android/Termux

[options]
packages = find:
python_requires = >=3.10
install_requires =
    flask>=3.0
    websockets>=12.0
    python-dotenv>=1.0
    psutil>=5.9

[options.entry_points]
console_scripts =
    tripple = main:main
